Fix collapsing on identical reprs (#5) and performance improvements.
Caching of reprs broke collapsing behavior that depended on unique UUIDs to tie label
elements to hidden checkbox inputs. To fix that, labels and inputs are now connected
implicitly by nesting elements. This change to the HTML structure prevents a pure CSS
solution to collapsing, so a JS snippet was added to restore collapsing behavior.

Skipping UUID generation substantially reduced HTML generation time and slightly
decreased output HTML size. Another performance boost was achieved by removing
singledispatch which has a substantial overhead and replacing with simple isinstance
checks.

--- a/eerepr/static/css/style.css
+++ b/eerepr/static/css/style.css
@@ -52,13 +52,15 @@ body.vscode-dark {
   padding-left: 0 !important;
 }
 
-.eerepr-header {
+.eerepr-header-open,
+.eerepr-header-closed {
   color: var(--font-color-secondary);
   cursor: pointer;
   margin: 0;
 }
 
-.eerepr-header:hover {
+.eerepr-header-open:hover,
+.eerepr-header-closed:hover {
   color: var(--font-color-primary);
 }
 
@@ -75,17 +77,15 @@ body.vscode-dark {
   display: none;
 }
 
-/* Hide by default */
-.eerepr-list {
+.eerepr-header-closed + .eerepr-list {
   display: none;
 }
 
-/* Reveal when expanded */
-.eerepr-collapser:checked + .eerepr-header + .eerepr-list {
+.eerepr-header-open + .eerepr-list {
   display: block;
 }
 
-.eerepr-header::before {
+.eerepr-header-closed::before {
   display: inline-block;
   content: "▼";
   margin-right: 6px;
@@ -93,6 +93,10 @@ body.vscode-dark {
   transition: transform 0.2s;
 }
 
-.eerepr-collapser:checked + .eerepr-header::before {
+.eerepr-header-open::before {
   transform: rotate(0deg);
+  display: inline-block;
+  content: "▼";
+  margin-right: 6px;
+  transition: transform 0.2s;
 }
